--- a/public/pages/map.html
+++ b/public/pages/map.html
@@ -1,17 +1,13 @@
 <div ng-controller="mapController as map" style="height: 100%">
-    <div id="map" class="map"></div>
+    <div id="map" style="width:100%; height:100%"></div>
     <script type="text/javascript">
-        var map = new ol.Map({
-            target: 'map',
-            layers: [
-                new ol.layer.Tile({
-                    source: new ol.source.MapQuest({layer: 'sat'})
-                })
-            ],
-            view: new ol.View({
-                center: ol.proj.fromLonLat([37.41, 8.82]),
-                zoom: 4
-            })
+        var map;
+
+        DG.then(function () {
+            map = DG.map('map', {
+                center: [46.466302, 30.722578],
+                zoom: 12
+            });
         });
     </script>
 </div>
