--- a/public/pages/map.html
+++ b/public/pages/map.html
@@ -1,3 +1,14 @@
 <div ng-controller="mapController as map" style="height: 100%">
+    <style>
+        html, body {
+            height: 100%;
+            margin: 0;
+            padding: 0;
+        }
+        #map {
+            height: 100%;
+        }
+    </style>
+    <div id="map"></div>
 
 </div>
