--- a/public/pages/graphic.html
+++ b/public/pages/graphic.html
@@ -1,3 +1,3 @@
 <div ng-controller="graphicController as graphic">
-    <highchart id="chart" config="chartConfig" style=" height:100%;"></highchart>
+    <highchart id="chart" config="graphic.chartConfig" style=" height:100%;"></highchart>
 </div>
