uncommented graphics, add coffeescript

--- a/public/pages/data.html
+++ b/public/pages/data.html
@@ -1,4 +1,4 @@
-<div ng-controller="dataController as data">
+<div ng-controller="DataController as data">
     <div id="table-wrapper">
         <div id="table-scroll">
             <table class="table" border="1">
