--- a/public/pages/map.html
+++ b/public/pages/map.html
@@ -1,3 +1,3 @@
-<div ng-controller="mapController as map" style="height: 100%">
-    <div id="map"></div>
+<div ng-controller="MapController as map" style="height: 100%">
+
 </div>
