--- a/public/index.html
+++ b/public/index.html
@@ -4,16 +4,12 @@
 <title>Візуалізація відкритих даних</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900' rel='stylesheet' type='text/css'>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+<!--<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900' rel='stylesheet' type='text/css'>-->
+<!--<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>-->
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
-<script src="js/libraries/jquery.min.js"></script>
-<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCaL34OGHlD9TpvJGoPT1MT4bZ_wJAjGNQ&callback=initMap"></script>
-
-
+<!--<script src="js/libraries/jquery.min.js"></script>-->
+<!--<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCaL34OGHlD9TpvJGoPT1MT4bZ_wJAjGNQ&callback=initMap"></script>-->
 </head>
-
-
 <body ng-controller="mainController as main">
 <div style="margin-left: 10%; margin-right: 10%; height: 100%">
 	<div class="header_bg">
@@ -26,10 +22,9 @@
 				</div>
 				<div class="nav">
 					<ul>
-						<li id="dataButton" class="fakelink"><a ng-click="main.toData()" class="scroll">Дані</a></li>
-						<li id="graphicButton" class="fakelink"><a ng-click="main.toGraphic()" class="scroll">Інфографіка</a></li>
-						<li id="mapButton" class="fakelink"><a ng-click="main.toMap()" class="scroll">Карта</a></li>
-						<div class="clear"> </div>
+						<li id="dataButton" class="fakelink"><a ui-sref="data" class="scroll">Дані</a></li>
+						<li id="graphicButton" class="fakelink"><a ui-sref="graphic" class="scroll">Інфографіка</a></li>
+						<li id="mapButton" class="fakelink"><a ui-sref="map" class="scroll">Карта</a></li>
 					</ul>
 				</div>
 			</div>
@@ -39,7 +34,7 @@
 	</div>
 	<div class="container" style="height: 80%">
 		<div class="left" style="height: 100%">
-			<ng-view></ng-view>
+			<div ui-view></div>
 		</div>
 		<div class="right filter" ng-controller="FilterController as filter">
 			<div ng-repeat="field in filter.fields">
@@ -70,23 +65,27 @@
 	</div>
 </div>
 
+<!-- Angular modules -->
 <script type="text/javascript" src="http://code.highcharts.com/highcharts.js"></script>
 <script type="text/javascript" src="/js/libraries/jquery-2.1.4.min.js"></script>
 <script type="text/javascript" src="/js/libraries/bootstrap.min.js"></script>
 <script type="text/javascript" src="/js/libraries/angular.min.js"></script>
-<script type="text/javascript" src="/js/libraries/angular-route.min.js"></script>
+<!--<script type="text/javascript" src="/js/libraries/angular-route.min.js"></script>-->
 <script type="text/javascript" src="/js/libraries/underscore-min.js"></script>
 <script type="text/javascript" src="/js/libraries/highcharts-ng.js"></script>
 <script type="text/javascript" src="/js/main.js"></script>
-<script type="text/javascript" src="/js/routing.js"></script>
+<!--<script type="text/javascript" src="/js/routing.js"></script>-->
+
+<script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+<!-- Angular modules -->
 
 <script type="text/javascript" src="/js/factories/DatasetFactory.js"></script>
 <script type="text/javascript" src="/js/factories/FilterFactory.js"></script>
 <script type="text/javascript" src="/js/controllers/mainController.js"></script>
-<!--<script type="text/javascript" src="/js/controllers/dataController.js"></script>-->
+<script type="text/javascript" src="/js/controllers/dataController.js"></script>
 <script type="text/javascript" src="/js/controllers/graphicController.js"></script>
 <script type="text/javascript" src="/js/controllers/mapController.js"></script>
-<script type="text/javascript" src="/coffee/dataController.js"></script>
+<!--<script type="text/javascript" src="/coffee/dataController.js"></script>-->
 <script type="text/javascript" src="/js/controllers/filterController.js"></script>
 </body>
 </html>
