cleaned up project

--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,7 @@
 <title>Візуалізація відкритих даних</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-<!--<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900' rel='stylesheet' type='text/css'>-->
-<!--<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>-->
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
-<!--<script src="js/libraries/jquery.min.js"></script>-->
-<!--<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCaL34OGHlD9TpvJGoPT1MT4bZ_wJAjGNQ&callback=initMap"></script>-->
 </head>
 <body ng-controller="mainController as main">
 <div style="margin-left: 10%; margin-right: 10%; height: 100%">
@@ -65,17 +61,16 @@
 	</div>
 </div>
 
-<!-- Angular modules -->
-<script type="text/javascript" src="http://code.highcharts.com/highcharts.js"></script>
+<!-- TODO: If need some of this libs or modules, use Bower to install it -->
+<!--<script type="text/javascript" src="http://code.highcharts.com/highcharts.js"></script>
 <script type="text/javascript" src="/js/libraries/jquery-2.1.4.min.js"></script>
 <script type="text/javascript" src="/js/libraries/bootstrap.min.js"></script>
 <script type="text/javascript" src="/js/libraries/angular.min.js"></script>
-<!--<script type="text/javascript" src="/js/libraries/angular-route.min.js"></script>-->
 <script type="text/javascript" src="/js/libraries/underscore-min.js"></script>
 <script type="text/javascript" src="/js/libraries/highcharts-ng.js"></script>
-<script type="text/javascript" src="/js/main.js"></script>
-<!--<script type="text/javascript" src="/js/routing.js"></script>-->
+<script type="text/javascript" src="/js/main.js"></script>-->
 
+<!-- Angular modules -->
 <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
 <!-- Angular modules -->
 
