--- a/public/index.html
+++ b/public/index.html
@@ -57,12 +57,12 @@
 		<div class="col-sm-3 no-padding">
 			<div id="sidebar-wrapper">
 				<ul class="sidebar-nav">
-					<h3 class="sidebar-brand">Категорії</h3>
+					<h3 class="sidebar-brand">Набори даних</h3>
 					<li>
-						<a ui-sref="graphic">Тест 1</a>
+						<a>Викиди забруднюючих речовин</a>
 					</li>
 					<li>
-						<a>Тест 2</a>
+						<!--<a>Тест 2</a>-->
 					</li>
 				</ul>
 			</div>
