--- a/public/pages/graphic.html
+++ b/public/pages/graphic.html
@@ -4,7 +4,7 @@
             chart-click="onClick" >
     </canvas>
 
-    <canvas id="bar" class="chart chart-bar"
+    <!--<canvas id="bar" class="chart chart-bar"
             chart-data="data" chart-labels="labels"> chart-series="series"
-    </canvas>
+    </canvas>-->
 </div>
