added infowindows for markers with area names and area highlighting

--- a/public/pages/map.html
+++ b/public/pages/map.html
@@ -1,4 +1,4 @@
 <div ng-controller="mapController as map" style="height: 100%">
     <div id="map"></div>
-    <button class="action" ng-click="map.highlight()">Highlight</button>
+    <button class="action" ng-click="highlight()">Highlight</button>
 </div>
