--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900' rel='stylesheet' type='text/css'>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCaL34OGHlD9TpvJGoPT1MT4bZ_wJAjGNQ"></script>
+	<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
 <link href="css/main.css" rel="stylesheet" type="text/css" media="all" />
 <script src="js/libraries/jquery.min.js"></script>
 <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" />
@@ -37,7 +38,7 @@
 	</div>
 	<div class="container" style="height: 80%">
 		<div class="left" style="height: 100%">
-			<div ui-view></div>
+			<div ui-view class="main"></div>
 		</div>
 		<div class="right filter" ng-controller="FilterController as filter">
 			<div ng-repeat="field in filter.fields">
@@ -72,7 +73,6 @@
 <script src="/bower_components/angular-aria/angular-aria.js"></script>
 <script src="/bower_components/angular-animate/angular-animate.js"></script>
 <script src="/bower_components/angular-material/angular-material.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCaL34OGHlD9TpvJGoPT1MT4bZ_wJAjGNQ"></script>
 <script type="text/javascript" src="http://code.highcharts.com/highcharts.js"></script>
 <script type="text/javascript" src="/js/libraries/jquery.min.js"></script>
 <script type="text/javascript" src="/js/libraries/bootstrap.min.js"></script>
