--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,7 @@
 		</div>
 	</div>
 </div>
-
+<script src="bower_components/lodash/dist/lodash.min.js"></script>
 <!-- Angular modules -->
 <script src="/bower_components/angular/angular.min.js"></script>
 <script src="/bower_components/angular-aria/angular-aria.js"></script>
@@ -84,6 +84,9 @@
 <!--<script type="text/javascript" src="/js/routing.js"></script>-->
 
 <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+<script src="bower_components/angular-simple-logger/dist/angular-simple-logger.min.js"></script>
+<script src="bower_components/angular-google-maps/dist/angular-google-maps.min.js"></script>
+
 <!-- Angular modules -->
 
 <script type="text/javascript" src="/js/factories/DatasetFactory.js"></script>
