--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 
 </head>
 <body ng-controller="mainController as main">
-<div style="margin-left: 10%; margin-right: 10%; height: 100%">
+<div style="margin-left: 10%; margin-right: 10%; height: 90%; ">
 	<div class="header_bg">
 		<div class="wrap">
 			<div class="header">
@@ -62,6 +62,12 @@
 					   ng-change="filter.applyFilter(field.id, field.selectedVal)"
 					   step="1">
 				<span ng-if="field.type == 'range'">{{field.selectedVal}}</span>
+
+
+			</div>
+			<div ng-controller="MapController">
+
+
 			</div>
 		</div>
 	</div>
