--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
 		<div class="left" style="height: 100%">
 			<div ui-view class="main"></div>
 		</div>
-		<div class="right filter" ng-controller="FilterController as filter">
+		<div class="right filter" ng-controller="FilterController as filter" ng-show="main.isDataStateActive">
 			<div ng-repeat="field in filter.fields">
 				<label ng-if="field.type == 'select'" for="{{field.id}}"><span ng-bind="field.id"></span></label>
 				<br>
@@ -65,10 +65,10 @@
 
 
 			</div>
-			<div ng-controller="MapController">
+			<!--<div ng-controller="MapController">-->
 
 
-			</div>
+			<!--</div>-->
 		</div>
 	</div>
 </div>
