--- a/public/pages/editor.html
+++ b/public/pages/editor.html
@@ -24,16 +24,17 @@
                         <input type="text" ng-model="field.type">
                         <label>Графіка</label>
                         <input type="checkbox" ng-model="hasGraphics">
-                        <select ng-show="hasGraphics" ng-model="field.graphics">
-                            <option value="line" selected>Line chart</option>
-                            <option value="area">Area chart</option>
-                            <option value="bar">Bar chart</option>
+                        <select ng-show="field.graphics || hasGraphics" ng-model="field.graphics">
+                            <option ng-repeat="option in graphicTypes" value="{{option.value}}">
+                                {{option.name}}
+                            </option>
                         </select>
                         <label>Геодані</label>
                         <input type="checkbox" ng-model="hasGeoData">
-                        <select ng-show="hasGeoData" ng-model="field.geoData">
-                            <option value="lat" selected>Lat</option>
-                            <option value="lon">Lon</option>
+                        <select ng-show="field.geoData || hasGeoData" ng-model="field.geoData">
+                            <option ng-repeat="option in geoTypes" value="{{option.value}}">
+                                {{option.name}}
+                            </option>
                         </select>
                         <hr>
                     </li>
