Cancel editing and updating dataset

--- a/public/pages/editor.html
+++ b/public/pages/editor.html
@@ -40,7 +40,8 @@
                             <hr>
                         </li>
                     </ul>
-                    <button type="submit" class="md-raised" ng-click="save()">Зберегти</button>
+                    <button type="submit"ng-click="save()">Зберегти</button>
+                    <button ng-click="cancelEdit()">Відмінити</button>
                 </div>
             </div>
         </div>
