--- a/public/index.html
+++ b/public/index.html
@@ -1,97 +1,85 @@
 <!DOCTYPE HTML>
 <html ng-app="main">
 <head>
-<title>Візуалізація відкритих даних</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900' rel='stylesheet' type='text/css'>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCaL34OGHlD9TpvJGoPT1MT4bZ_wJAjGNQ"></script>
-<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
-<link href="css/main.css" rel="stylesheet" type="text/css" media="all" />
-<script src="js/libraries/jquery.min.js"></script>
-<meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" />
-<link rel="stylesheet" href="/bower_components/angular-material/angular-material.css">
+	<title>Візуалізація відкритих даних</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
+	<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900' rel='stylesheet' type='text/css'>
+
+	<link href="css/main.css" rel="stylesheet" type="text/css" media="all" />
+	<link rel="stylesheet" href="/bower_components/angular-material/angular-material.css">
+
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCaL34OGHlD9TpvJGoPT1MT4bZ_wJAjGNQ"></script>
 </head>
 <body ng-controller="mainController as main">
-<div style="margin-left: 10%; margin-right: 10%; height: 90%; ">
-	<div class="header_bg">
+<div>
+	<div>
 		<div class="wrap">
 			<div class="header">
 				<div id="main">
-				<div class="logo">
-					<img style="height: 50px; vertical-align: text-top" src="images/logo.png" alt="" />
-					<p style="display: inline-block; font-size: xx-large; vertical-align: text-top">Візуалізація відкритих даних</p>
+					<div class="logo">
+						<img style="height: 50px; vertical-align: text-top" src="images/logo.png" alt="" />
+						<p style="display: inline-block; font-size: xx-large; vertical-align: text-top">Візуалізація відкритих даних</p>
+					</div>
+					<div class="nav">
+						<ul>
+							<li id="dataButton" class="fakelink"><a ui-sref="data" class="scroll">Дані</a></li>
+							<li id="graphicButton" class="fakelink"><a ui-sref="graphic" class="scroll">Інфографіка</a></li>
+							<li id="mapButton" class="fakelink"><a ui-sref="map" class="scroll">Карта</a></li>
+							<li id="editorButton" class="fakelink"><a ui-sref="editor" class="scroll">Завантаження</a></li>
+						</ul>
+					</div>
 				</div>
-				<div class="nav">
-					<ul>
-						<li id="dataButton" class="fakelink"><a ui-sref="data" class="scroll">Дані</a></li>
-						<li id="graphicButton" class="fakelink"><a ui-sref="graphic" class="scroll">Інфографіка</a></li>
-						<li id="mapButton" class="fakelink"><a ui-sref="map" class="scroll">Карта</a></li>
-						<li id="editorButton" class="fakelink"><a ui-sref="editor" class="scroll">Завантаження</a></li>
-					</ul>
+			</div>
+		</div>
+		<div class="container">
+			<div class="left">
+				<div ui-view class="main"></div>
+			</div>
+			<div class="right filter" ng-controller="FilterController as filter" ng-show="main.isDataStateActive">
+				<div ng-repeat="field in filter.fields">
+					<label ng-if="field.type == 'select'" for="{{field.id}}"><span ng-bind="field.id"></span></label>
+					<br>
+					<select class="dropdown" ng-change="filter.applyFilter(field.id, field.selectedVal)"  ng-if="field.type == 'select'" id="{{field.id}}" ng-model="field.selectedVal">
+						<option value="-1" selected="selected"></option>
+						<option ng-repeat="value in field.values" value="{{value.id}}">{{value.name}}</option>
+					</select>
+
+					<label ng-if="field.type == 'range'" for="{{field.id}}"><span ng-bind="field.id"></span></label>
+					<br>
+					<input ng-if="field.type == 'range'"
+						   id="{{field.id}}"
+						   type="range"
+						   min="{{field.minVal}}"
+						   max="{{field.maxVal}}"
+						   value="field.selectedVal"
+						   ng-model="field.selectedVal"
+						   ng-change="filter.applyFilter(field.id, field.selectedVal)"
+						   step="1">
+					<span ng-if="field.type == 'range'">{{field.selectedVal}}</span>
+
+
 				</div>
 			</div>
-				<div class="clear"> </div>
-			</div>
 		</div>
-	</div>
-	<div class="container" style="height: 80%">
-		<div class="left" style="height: 100%">
-			<div ui-view class="main"></div>
-		</div>
-		<div class="right filter" ng-controller="FilterController as filter" ng-show="main.isDataStateActive">
-			<div ng-repeat="field in filter.fields">
-				<label ng-if="field.type == 'select'" for="{{field.id}}"><span ng-bind="field.id"></span></label>
-				<br>
-				<select class="dropdown" ng-change="filter.applyFilter(field.id, field.selectedVal)"  ng-if="field.type == 'select'" id="{{field.id}}" ng-model="field.selectedVal">
-					<option value="-1" selected="selected"></option>
-					<option ng-repeat="value in field.values" value="{{value.id}}">{{value.name}}</option>
-				</select>
-
-				<label ng-if="field.type == 'range'" for="{{field.id}}"><span ng-bind="field.id"></span></label>
-				<br>
-				<input ng-if="field.type == 'range'"
-					   id="{{field.id}}"
-					   type="range"
-					   min="{{field.minVal}}"
-					   max="{{field.maxVal}}"
-					   value="field.selectedVal"
-					   ng-model="field.selectedVal"
-					   ng-change="filter.applyFilter(field.id, field.selectedVal)"
-					   step="1">
-				<span ng-if="field.type == 'range'">{{field.selectedVal}}</span>
-
-
-			</div>
-			<!--<div ng-controller="MapController">-->
-
-
-			<!--</div>-->
-		</div>
-	</div>
+    </div>
 </div>
-<script src="bower_components/lodash/dist/lodash.min.js"></script>
-<!-- Angular modules -->
+<script type="text/javascript" src="/js/libraries/jquery.min.js"></script>
 <script src="/bower_components/angular/angular.min.js"></script>
+<!-- Angular modules -->
 <script src="/bower_components/angular-aria/angular-aria.js"></script>
 <script src="/bower_components/angular-animate/angular-animate.js"></script>
 <script src="/bower_components/angular-material/angular-material.js"></script>
-<script type="text/javascript" src="http://code.highcharts.com/highcharts.js"></script>
-<script type="text/javascript" src="/js/libraries/jquery.min.js"></script>
-<script type="text/javascript" src="/js/libraries/bootstrap.min.js"></script>
-<script type="text/javascript" src="/js/libraries/angular-route.min.js"></script>
+<script type="text/javascript" src="/js/libraries/highcharts.js"></script>
 <script type="text/javascript" src="/js/libraries/underscore-min.js"></script>
+
 <script type="text/javascript" src="/js/libraries/highcharts-ng.js"></script>
-
-<script type="text/javascript" src="/js/main.js"></script>
-<!--<script type="text/javascript" src="/js/routing.js"></script>-->
-
 <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
 <script src="bower_components/angular-simple-logger/dist/angular-simple-logger.min.js"></script>
 <script src="bower_components/angular-google-maps/dist/angular-google-maps.min.js"></script>
-
+<!--<script src="bower_components/lodash/lodash.js"></script>-->
+<script src="js/main.js"></script>
 <!-- Angular modules -->
 
 <script type="text/javascript" src="/js/factories/DatasetFactory.js"></script>
@@ -100,7 +88,6 @@
 <script type="text/javascript" src="/js/controllers/dataController.js"></script>
 <script type="text/javascript" src="/js/controllers/graphicController.js"></script>
 <script type="text/javascript" src="/js/controllers/mapController.js"></script>
-<!--<script type="text/javascript" src="/coffee/dataController.js"></script>-->
 <script type="text/javascript" src="/js/controllers/filterController.js"></script>
 <script type="text/javascript" src="/js/controllers/editorController.js"></script>
 </body>
