--- a/public/index.html
+++ b/public/index.html
@@ -13,57 +13,54 @@
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCaL34OGHlD9TpvJGoPT1MT4bZ_wJAjGNQ"></script>
 </head>
 <body ng-controller="mainController as main">
-<div>
-	<div>
-		<div class="wrap">
-			<div class="header">
-				<div id="main">
-					<div class="logo">
-						<img style="height: 50px; vertical-align: text-top" src="images/logo.png" alt="" />
-						<p style="display: inline-block; font-size: xx-large; vertical-align: text-top">Візуалізація відкритих даних</p>
-					</div>
-					<div class="nav">
-						<ul>
-							<li id="dataButton" class="fakelink"><a ui-sref="data" class="scroll">Дані</a></li>
-							<li id="graphicButton" class="fakelink"><a ui-sref="graphic" class="scroll">Інфографіка</a></li>
-							<li id="mapButton" class="fakelink"><a ui-sref="map" class="scroll">Карта</a></li>
-							<li id="editorButton" class="fakelink"><a ui-sref="editor" class="scroll">Завантаження</a></li>
-						</ul>
-					</div>
-				</div>
-			</div>
+
+<md-toolbar>
+	<div class="md-toolbar-tools">
+		<h2>
+			<span>Візуалізація відкритих даних</span>
+		</h2>
+		<span flex></span>
+		<md-button class="md-raised" aria-label="Learn More" ui-sref="data">
+			Дані
+		</md-button>
+		<md-button class="md-raised" aria-label="Learn More" ui-sref="graphic">
+			Інфографіка
+		</md-button>
+		<md-button class="md-raised" aria-label="Learn More" ui-sref="map">
+			Карта
+		</md-button>
+		<md-button class="md-raised" aria-label="Learn More" ui-sref="editor">
+			Завантаження
+		</md-button>
+	</div>
+</md-toolbar>
+<div class="container">
+	<div class="left">
+		<div ui-view class="main"></div>
+	</div>
+	<div class="right filter" ng-controller="FilterController as filter" ng-show="main.isDataStateActive">
+		<div ng-repeat="field in filter.fields">
+			<label ng-if="field.type == 'select'" for="{{field.id}}"><span ng-bind="field.id"></span></label>
+			<br>
+			<select class="dropdown" ng-change="filter.applyFilter(field.id, field.selectedVal)"  ng-if="field.type == 'select'" id="{{field.id}}" ng-model="field.selectedVal">
+				<option value="-1" selected="selected"></option>
+				<option ng-repeat="value in field.values" value="{{value.id}}">{{value.name}}</option>
+			</select>
+
+			<label ng-if="field.type == 'range'" for="{{field.id}}"><span ng-bind="field.id"></span></label>
+			<br>
+			<input ng-if="field.type == 'range'"
+				   id="{{field.id}}"
+				   type="range"
+				   min="{{field.minVal}}"
+				   max="{{field.maxVal}}"
+				   value="field.selectedVal"
+				   ng-model="field.selectedVal"
+				   ng-change="filter.applyFilter(field.id, field.selectedVal)"
+				   step="1">
+			<span ng-if="field.type == 'range'">{{field.selectedVal}}</span>
 		</div>
-		<div class="container">
-			<div class="left">
-				<div ui-view class="main"></div>
-			</div>
-			<div class="right filter" ng-controller="FilterController as filter" ng-show="main.isDataStateActive">
-				<div ng-repeat="field in filter.fields">
-					<label ng-if="field.type == 'select'" for="{{field.id}}"><span ng-bind="field.id"></span></label>
-					<br>
-					<select class="dropdown" ng-change="filter.applyFilter(field.id, field.selectedVal)"  ng-if="field.type == 'select'" id="{{field.id}}" ng-model="field.selectedVal">
-						<option value="-1" selected="selected"></option>
-						<option ng-repeat="value in field.values" value="{{value.id}}">{{value.name}}</option>
-					</select>
-
-					<label ng-if="field.type == 'range'" for="{{field.id}}"><span ng-bind="field.id"></span></label>
-					<br>
-					<input ng-if="field.type == 'range'"
-						   id="{{field.id}}"
-						   type="range"
-						   min="{{field.minVal}}"
-						   max="{{field.maxVal}}"
-						   value="field.selectedVal"
-						   ng-model="field.selectedVal"
-						   ng-change="filter.applyFilter(field.id, field.selectedVal)"
-						   step="1">
-					<span ng-if="field.type == 'range'">{{field.selectedVal}}</span>
-
-
-				</div>
-			</div>
-		</div>
-    </div>
+	</div>
 </div>
 <script type="text/javascript" src="/js/libraries/jquery.min.js"></script>
 <script src="/bower_components/angular/angular.min.js"></script>
