--- a/public/pages/editor.html
+++ b/public/pages/editor.html
@@ -1,5 +1,5 @@
 <div ng-controller="EditorController">
-    <div ng-switch="isEditingActive" class="container">
+    <div ng-switch="isEditingActive" class="view-container">
         <div class="left">
             <div ng-switch-when="false">
                 <p>Вкажіть посилання або ідентифікатор набору даних (для порталу data.ngorg.od.ua)</p>
