--- a/public/pages/editor.html
+++ b/public/pages/editor.html
@@ -1,24 +1,43 @@
 <div ng-controller="EditorController">
+    <div ng-hide="isEditingActive">
+        <p>Оберыть набір даних для редагування з наявних</p>
+        <md-input-container class="md-block">
+            <label>Завантажений набір даних</label>
+            <md-select name="myModel" ng-model="selectedDownloadedDataset"
+                       ng-change="openDataset()">
+                <md-option ng-repeat="dataset in datasetsList" value="{{dataset.id}}">
+                    {{dataset.name}}
+                </md-option>
+            </md-select>
+        </md-input-container>
+    </div>
     <div ng-switch="isEditingActive" class="view-container">
         <div class="left">
             <div ng-switch-when="false">
                 <p>Вкажіть посилання або ідентифікатор набору даних (для порталу data.ngorg.od.ua)</p>
                 <form ng-submit="loadDataset(datasetOrIdentifier)">
                     <div layout-gt-xs="row">
-                        <label for="datasetId">Адреса або ідентифікатор</label>
-                        <input id="datasetId" ng-model="datasetOrIdentifier">
-                        <button type="submit" class="md-raised md-primary">Відкрити</button>
+                        <md-input-container class="md-block" flex-gt-xs>
+                            <label>Адреса або ідентифікатор</label>
+                            <input ng-model="datasetOrIdentifier">
+                        </md-input-container>
+                        <md-input-container>
+                            <md-button type="submit" class="md-raised md-primary">Відкрити</md-button>
+                        </md-input-container>
                     </div>
                 </form>
+                <md-progress-linear ng-show="isDatasetLoading" md-mode="indeterminate"></md-progress-linear>
                 <span ng-show="isDatasetLoading">Завантаження...</span>
             </div>
             <div ng-switch-when="true">
                 <p>Відредагуйте та доповніть набір даних</p>
                 <div>
-                    <label>Назва набору даних</label>
-                    <input ng-model="dataset.name">
-                    <ul>
-                        <li ng-repeat="field in dataset.fields">
+                    <md-input-container class="md-block" flex-gt-xs>
+                        <label>Назва набору даних</label>
+                        <input required ng-model="dataset.name">
+                    </md-input-container>
+                    <md-list>
+                        <md-list-item ng-repeat="field in dataset.fields">
                             <label>Назва поля</label>
                             <input type="text" ng-model="field.id">
                             <label>Тип даних</label>
@@ -37,21 +56,15 @@
                                     {{option.name}}
                                 </option>
                             </select>
-                            <hr>
-                        </li>
-                    </ul>
-                    <button type="submit"ng-click="save()">Зберегти</button>
-                    <button ng-click="cancelEdit()">Відмінити</button>
+                            <md-divider></md-divider>
+                        </md-list-item>
+                    </md-list>
+                    <md-button class="md-raised md-warn"
+                               ng-click="cancelEdit()">Відмінити</md-button>
+                    <md-button class="md-raised md-primary"
+                               type="submit"ng-click="save()">Зберегти</md-button>
                 </div>
             </div>
-        </div>
-        <div class="right">
-            <ul>
-                <li ng-repeat="dataset in datasetsList">
-                    <a href ng-bind="dataset.name" ng-click="openDataset(dataset.id)"></a>
-                    <hr>
-                </li>
-            </ul>
         </div>
     </div>
 </div>
