--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,8 @@
 		</md-toolbar>
 		<md-content layout-padding>
 			<md-list>
-				<md-list-item ng-repeat="dataset in main.datasetList" ng-click="main.openDataset(dataset)">
+				<md-list-item ng-repeat="dataset in main.datasetList"
+							  ng-click="main.openDataset(dataset)">
 					<span ng-bind="dataset.name"></span>
 					<md-divider></md-divider>
 				</md-list-item>
