--- a/public/pages/editor.html
+++ b/public/pages/editor.html
@@ -38,24 +38,30 @@
                     </md-input-container>
                     <md-list>
                         <md-list-item ng-repeat="field in dataset.fields">
-                            <label>Назва поля</label>
-                            <input type="text" ng-model="field.id">
-                            <label>Тип даних</label>
-                            <input type="text" ng-model="field.type">
+                            <md-input-container>
+                                <label>Назва поля</label>
+                                <input type="text" ng-model="field.id">
+                            </md-input-container>
+                            <md-input-container>
+                                <label>Тип даних</label>
+                                <input type="text" ng-model="field.type">
+                            </md-input-container>
                             <label>Графіка</label>
-                            <input type="checkbox" ng-model="hasGraphics">
-                            <select ng-show="field.graphics || hasGraphics" ng-model="field.graphics">
-                                <option ng-repeat="option in graphicTypes" value="{{option.value}}">
+                            <md-checkbox ng-model="hasGraphics"
+                                         ng-init="hasGraphics = !!field.graphics"></md-checkbox>
+                            <md-select ng-show="field.graphics || hasGraphics" ng-model="field.graphics">
+                                <md-option ng-repeat="option in graphicTypes" value="{{option.value}}">
                                     {{option.name}}
-                                </option>
-                            </select>
+                                </md-option>
+                            </md-select>
                             <label>Геодані</label>
-                            <input type="checkbox" ng-model="hasGeoData">
-                            <select ng-show="field.geoData || hasGeoData" ng-model="field.geoData">
-                                <option ng-repeat="option in geoTypes" value="{{option.value}}">
+                            <md-checkbox ng-model="hasGeoData"
+                                         ng-init="hasGeoData = !!field.geoData"></md-checkbox>
+                            <md-select ng-show="field.geoData || hasGeoData" ng-model="field.geoData">
+                                <md-option ng-repeat="option in geoTypes" value="{{option.value}}">
                                     {{option.name}}
-                                </option>
-                            </select>
+                                </md-option>
+                            </md-select>
                             <md-divider></md-divider>
                         </md-list-item>
                     </md-list>
